--- a/dashboard_mentoria/app/ui/dashboard_comp/sidebar/menuLink/menuLink.module.css
+++ b/dashboard_mentoria/app/ui/dashboard_comp/sidebar/menuLink/menuLink.module.css
@@ -5,6 +5,7 @@
   gap: 10px;
   margin: 5px 0px;
   border-radius: 10px;
+  transition: background-color 0.3s ease;
 }
 
 .container:hover,.active {
