--- a/dashboard_mentoria/app/ui/dashboard_comp/navbar/navbar.module.css
+++ b/dashboard_mentoria/app/ui/dashboard_comp/navbar/navbar.module.css
@@ -35,7 +35,21 @@
   outline: none;
 }
 
+.input:hover {
+  cursor: not-allowed;
+}
+
 .icons {
+  display: flex;
+  gap: 20px;
+}
+
+.icons:hover {
+  cursor: not-allowed;
+}
+
+.backButton {
+  align-items: center;
   display: flex;
   gap: 20px;
 }
