--- a/dashboard_mentoria/app/ui/dashboard_comp/products/addproduct/addproduct.module.css
+++ b/dashboard_mentoria/app/ui/dashboard_comp/products/addproduct/addproduct.module.css
@@ -45,3 +45,11 @@
   border: none;
   cursor: pointer;
 }
+
+.customSwalContainer {
+  background-color: #22222e;
+  color: #ffffff;
+  font-size: 1.2em;
+  padding: 20px;
+  border-radius: 5px;
+}
