--- a/dashboard_mentoria/app/ui/dashboard_comp/products/datasource/datasource.module.css
+++ b/dashboard_mentoria/app/ui/dashboard_comp/products/datasource/datasource.module.css
@@ -8,9 +8,9 @@
 
 .user{
   display: flex;
-  gap: 10px;
+  gap: 30px;
   align-items: center;
-  justify-content: center;
+  padding-left: 55px;
 }
 
 .userImage {
