--- a/dashboard_mentoria/app/ui/dashboard_comp/users/viewUserPage/viewUserPage.module.css
+++ b/dashboard_mentoria/app/ui/dashboard_comp/users/viewUserPage/viewUserPage.module.css
@@ -18,11 +18,15 @@
 
 .imgContainer {
   width: 100%;
-  height: 300px;
+  height: 350px;
   position: relative;
   border-radius: 10px;
   overflow: hidden;
   margin-bottom: 20px;
+}
+
+.userImg {
+  object-fit:cover;
 }
 
 .formContainer {
